Cascading Change Log

2.2.0 [unreleased]

  Fixed issue in local mode where an OOME could cause a cascading set of additional OOMEs making the jvm unstable.

  Updated c.f.s.MemoryCoGroupGate and c.f.l.s.LocalGroupByGate to drain internal collections when pipelining
  tuples downstream in the pipeline.

  Added c.t.h.BigDecimalSerialization to allow Hadoop to serialize and deserialize j.m.BigDecimal instances.

  Update slf4j to version 1.7.2.

  Added coercion support for j.m.BigDecimal.

  Added c.p.PlatformSuite annotation allowing a c.PlatformTestCase sub-class to be marked as being a JUnit suite
  of tests accessible, by default, via a static "suite" method.

  Updated provided c.s.Scheme subclasses to honor field type information.

  Updated c.o.expression, c.o.aggregator, and c.p.assembly operations to honor field type information.

  Updated c.o.Identity and c.p.a.Coerce to uses field type information during coercion.

  Added c.t.t.CoercibleType interface to allow for customization of individual field data types and formats. Also
  added the c.t.t.DateType implementation for managing string formatted dates to and from a long timestamp.

  Updated c.p.Splice to fail during planning if grouping or merging fields do not share the same field types, unless
  the field in question has a j.u.Comparator to handle the incompatible comparisons.

  Fixed issue where a c.p.CoGroup join on Fields.NONE would fail during planning.

  Updated c.p.a.Unique to optionally filter out null values.

  Added c.o.e.ScriptFunction, ScriptTupleFunction, and c.o.e.ScriptFilter operations to allow for more expressive
  Java scripts.

  Added "platform.includes" system property so tests can be limited to specified platforms.

  Added c.p.a.MaxBy and c.p.a.MinBy c.p.a.AggregateBy sub-classes to perform max and min, respectively. If the given
  result fields declare a type, the result will be coerced to that type.
